--- a/backend/services/auth-service/package.json
+++ b/backend/services/auth-service/package.json
@@ -1,7 +1,20 @@
 {
-  "name":"auth-service",
-  "version":"0.1.0",
-  "private":true,
-  "scripts":{"start":"node src/index.js"},
-  "dependencies":{"express":"^4.18.2","jsonwebtoken":"^9.0.0"}
+  "name": "auth-service",
+  "version": "0.1.0",
+  "main": "src/server.js",
+  "private": true,
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.20.0",
+    "nodemon": "^3.1.11"
+  }
 }
