--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
     "frontend",
     "backend/*",
     "backend/services/*"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^9.39.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.6.2"
+  }
 }
