--- a/backend/gateway/package.json
+++ b/backend/gateway/package.json
@@ -1,12 +1,16 @@
 {
-  "name":"skillhub-gateway",
-  "version":"0.1.0",
-  "private":true,
-  "scripts":{
-    "start":"node src/main.js"
+  "name": "skillhub-gateway",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start": "node src/main.js",
+    "dev": "nodemon src/main.js"
   },
-  "dependencies":{
-    "express":"^4.18.2",
-    "http-proxy-middleware":"^2.0.6"
+  "dependencies": {
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
