--- a/backend/services/auth-service/package.json
+++ b/backend/services/auth-service/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.js",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
